--- a/.net-core.md
+++ b/.net-core.md
@@ -3,13 +3,8 @@
 
 ## .Net Core vs Desktop .Net Framework
 
-> VS Code does not support debugging applications running on the Desktop .NET Framework.
-> Due to this focus, many standard C# project types are not recognized by VS Code. 
-> An example of a non-supported project type is an ASP.NET MVC Application (though 
-> ASP.NET Core is supported). In these cases, if you simply want to have a lightweight 
-> tool to edit a file - VS Code has you covered. If you want the best possible experience 
-> for those projects and development on Windows in general, we recommend you use Visual 
-> Studio Community.
+> VS Code does not support debugging applications running on the Desktop .NET Framework (4.6.x and lower).
+> An example of a non-supported project type is an ASP.NET MVC Application (though ASP.NET Core is supported).
 
 ## .Net Standard
 
@@ -17,10 +12,8 @@
 that all .NET platforms have to implement. This unifies the .NET platforms and prevents future fragmentation.
 
 ## Migrating from project.json to project.csproj for MSBuild
-> The dotnet migrate command will migrate a valid Preview 2 project.json based project 
-> to a valid Preview 4 csproj project. By default, the command will migrate the root 
-> project and any project references that the root project contains. This behavior can 
-> be disabled using the --skip-project-references option at runtime. 
+> The dotnet migrate command will migrate a valid Preview 2 
+> project.json based project to a valid Preview 4 csproj project. 
 > [More info here.](https://docs.microsoft.com/en-us/dotnet/articles/core/preview3/tools/dotnet-migrate)
 
 Get the latest SDK and Runtime for new commands like `dotnet migrate`
@@ -31,3 +24,9 @@ Get the latest SDK and Runtime for new commands like `dotnet migrate`
 rem 'Run .Net Migrate'
 dotnet migrate
 ```
+
+## Getting Started with ASP.Net Core and MVC
+
+1) To setup your development machine download and install `.NET Core` and `Visual Studio Code` with the `C# extension`. 
+2) `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org). It's an MSI on windows. 
+[//]: <> (Add MacOS Steps here?)
