setup notes on .net core mvc

--- a/.net-core.md
+++ b/.net-core.md
@@ -3,13 +3,14 @@
 
 ## .Net Core vs Desktop .Net Framework
 
-> VS Code does not support debugging applications running on the Desktop .NET Framework (4.6.x and lower).
+> VS Code does not support debugging applications running on the Desktop .NET Framework.
 > An example of a non-supported project type is an ASP.NET MVC Application (though ASP.NET Core is supported).
 
 ## .Net Standard
 
-[.Net Standard](https://blogs.msdn.microsoft.com/dotnet/2016/09/26/introducing-net-standard/) is a set of APIs 
-that all .NET platforms have to implement. This unifies the .NET platforms and prevents future fragmentation.
+> [.Net Standard](https://blogs.msdn.microsoft.com/dotnet/2016/09/26/introducing-net-standard/) is a set of APIs
+> that all .NET platforms have to implement. This unifies the .NET platforms and prevents future fragmentation 
+> in frameworks like .NET Framework, .NET Core, and Xamarin
 
 ## Migrating from project.json to project.csproj for MSBuild
 > The dotnet migrate command will migrate a valid Preview 2 
@@ -28,5 +29,7 @@ dotnet migrate
 ## Getting Started with ASP.Net Core and MVC
 
 1) To setup your development machine download and install `.NET Core` and `Visual Studio Code` with the `C# extension`. 
-2) `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org). It's an MSI on windows. 
-[//]: <> (Add MacOS Steps here?)
+2) `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org). It's an MSI on windows. <!-- (Add MacOS Steps here?) -->
+3) Install Yeoman `npm install -g yo`
+4) exec `yo` and install `aspnet`, `aspnet-mvc` 
+5) Install Bower `npm install -g bower`
