.net core setup steps continued

--- a/.net-core.md
+++ b/.net-core.md
@@ -26,10 +26,13 @@ rem 'Run .Net Migrate'
 dotnet migrate
 ```
 
-## Getting Started with ASP.Net Core and MVC
+## Getting Started with ASP.Net Core
 
 1) To setup your development machine download and install `.NET Core` and `Visual Studio Code` with the `C# extension`. 
 2) `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org). It's an MSI on windows. <!-- (Add MacOS Steps here?) -->
 3) Install Yeoman `npm install -g yo`
-4) exec `yo` and install `aspnet`, `aspnet-mvc` 
+4) exec `yo` command and install `aspnet`, `aspnet-mvc` 
 5) Install Bower `npm install -g bower`
+6) 
+7) 
+8) 
