--- a/md/.net-core.md
+++ b/md/.net-core.md
@@ -28,18 +28,11 @@ dotnet migrate
 
 ## Getting Started with ASP.Net Core
 
-1) To setup your development machine download and install `.NET Core` and `Visual Studio Code` with the `C# extension`. 
-
-2) `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org). It's an MSI on windows. <!-- (Add MacOS Steps here?) -->
-
-3) Install Yeoman `npm install -g yo`
-
-4) exec `yo` command and install `aspnet`, `aspnet-mvc` 
-
-5) Install Bower `npm install -g bower`
-
-6) 
-
-7) 
-
-8) 
+1. To setup your development machine download and install `.NET Core` and `Visual Studio Code` with the `C# extension`. 
+2. `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org). It's an MSI on windows. <!-- (Add MacOS Steps here?) -->
+3. Install Yeoman `npm install -g yo`
+4. exec `yo` command and install `aspnet`, `aspnet-mvc` 
+5. Install Bower `npm install -g bower`
+6. 
+7. 
+8. 
