updated IIS Express notes

--- a/md/vs2015.md
+++ b/md/vs2015.md
@@ -2,9 +2,13 @@
 # VIsual Studio 2015
 
 ## Connect to IIS Express from another device
-Add a binding to the project directories `.vs/config/applicationhost.config` file
+Add a binding to the project directories `.vs/config/applicationhost.config` file under the correct `site` node in xml
 ```xml
-<binding protocol="http" bindingInformation="*:64551:192.168.40.103" /> 
+<site name="BTWebMVC" id="2">
+    <bindings>
+        <binding protocol="http" bindingInformation="*:64551:192.168.40.103" /> 
+    </bindings>
+</site>
 ```
 ```ps
 rem "specifically allow incoming connections to your application"
@@ -13,6 +17,9 @@ netsh http add urlacl url=http://192.168.40.103:11406/ user=everyone
 netsh http add urlacl url=http://192.168.40.103:44826/ user=everyone 
 rem "adds a rule in the Windows Firewall"
 netsh advfirewall firewall add rule name="IISExpressWeb" dir=in protocol=tcp localport=64551 profile=private remoteip=localsubnet action=allow
+netsh advfirewall firewall add rule name="IISExpressWeb" dir=in protocol=tcp localport=11406 profile=private remoteip=localsubnet action=allow
+netsh advfirewall firewall add rule name="IISExpressWeb" dir=in protocol=tcp localport=44826 profile=private remoteip=localsubnet action=allow
+rem "make sure to run VS2015 as administrator from now on!"
 ```                    
 
 ## VS2015 keybindings for sequential tabbing between open files for windows.
