--- a/md/.net-core.md
+++ b/md/.net-core.md
@@ -26,13 +26,21 @@ rem 'Run .Net Migrate'
 dotnet migrate
 ```
 
-## Getting Started with ASP.Net Core
+## Getting Started with .Net Core (Windows 10)
 
 1. To setup your development machine download and install `.NET Core` and `Visual Studio Code` with the `C# extension`. 
 2. `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org). It's an MSI on windows. <!-- (Add MacOS Steps here?) -->
-3. Install Yeoman `npm install -g yo`
-4. exec `yo` command and install `aspnet`, `aspnet-mvc` 
-5. Install Bower `npm install -g bower`
-6. 
-7. 
-8. 
+3. Install Yeoman `npm install -g yo` from `cmd`
+4. exec `yo` command and install `aspnet`, `aspnet-mvc` in `cmd`
+5. Install Bower `npm install -g bower` in `cmd`
+
+## Getting Started with ASP.Net Core (MacOS)
+
+1. Install [Homebrew](http://brew.sh) from `Terminal`.
+2. Go to [Microsoft](https://www.microsoft.com/net/core#macos) for explicit additional brew commnads for setup.
+3. Exec Brew setup commands obtained from step 2.
+4. Download and install .Net Core from [Microsoft](https://www.microsoft.com/net/core#macos).
+5. `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org).
+6. Install Yeoman `sudo npm install -g yo`
+7. exec `yo` command and install `aspnet`, `aspnet-mvc`
+8. Install Bower `sudo npm install -g bower` in `cmd`
