notes about running your first asp.net core web app

--- a/md/.net-core.md
+++ b/md/.net-core.md
@@ -1,6 +1,23 @@
 #### [<< readme.md](../README.md) 
 # .Net Core Notes
 
+## Getting Started with ASP.Net Core (MacOS)
+1. Install [Visual Studio Code](https://code.visualstudio.com) and its [C# extension](https://marketplace.visualstudio.com/items?itemName=ms-vscode.csharp).
+2. Install [Homebrew](http://brew.sh) from VSCode's terminal. Brew is a Package Manager for MacOS that can install neat and necessary things.
+3. Go to [Microsoft](https://www.microsoft.com/net/core#macos) for explicit additional brew commnads for setup.
+4. Exec Brew setup commands obtained from step 2. ASP.Net Core requires OpenSSL to work. these steps ensure it's installed properly. You can pretty much forget about `Brew` now.
+5. Download and install .Net Core from [Microsoft](https://www.microsoft.com/net/core#macos).
+6. `npm` is the NodeJS Package Manager. It's obviously bundled with NodeJS. Install it. [nodejs.org](https://nodejs.org).
+7. Install Bower using npm. `npm install -g bower`
+8. Let's make a web app. `mkdir ~/Source/first-web-app`
+9. Explicitly open the folder we created in VSCode. `File > Open Folder`
+10. Exec `dotnet new -t web` in VSCode Terminal. The `-t` option specifies the type of app we want to create. In this case a web app.
+    - Eventually VSCode will ask you if you want to add launch configuration files. `click yes` 
+11. Exec `dotnet restore` in VSCode Terminal.
+12. Open `bower.json` to view what JS dependencies Microsoft thinks it should install by default for you, then restore those dependencies by executing `bower install`
+13. Exec `dotnet build`
+14. Hit `fn + F5` to debug.
+
 ## .Net Core vs Desktop .Net Framework
 
 > VS Code does not support debugging applications running on the Desktop .NET Framework.
@@ -26,21 +43,11 @@ rem 'Run .Net Migrate'
 dotnet migrate
 ```
 
-## Getting Started with .Net Core (Windows 10)
+<!-- ## Getting Started with .Net Core (Windows 10)
 
 1. To setup your development machine download and install `.NET Core` and `Visual Studio Code` with the `C# extension`. 
-2. `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org). It's an MSI on windows. <!-- (Add MacOS Steps here?) -->
+2. `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org). It's an MSI on windows.
 3. Install Yeoman `npm install -g yo` from `cmd`
-4. exec `yo` command and install `aspnet`, `aspnet-mvc` in `cmd`
-5. Install Bower `npm install -g bower` in `cmd`
+4. exec `yo` command and install `aspnet`, `aspnet-mvc` in `cmd` 
+5. Install Bower `npm install -g bower` in `cmd` -->
 
-## Getting Started with ASP.Net Core (MacOS)
-
-1. Install [Homebrew](http://brew.sh) from `Terminal`.
-2. Go to [Microsoft](https://www.microsoft.com/net/core#macos) for explicit additional brew commnads for setup.
-3. Exec Brew setup commands obtained from step 2.
-4. Download and install .Net Core from [Microsoft](https://www.microsoft.com/net/core#macos).
-5. `Node.js` and `npm` are also required. [nodejs.org](https://nodejs.org).
-6. Install Yeoman `sudo npm install -g yo`
-7. exec `yo` command and install `aspnet`, `aspnet-mvc`
-8. Install Bower `sudo npm install -g bower` in `cmd`
