fixed notes for vs2015

--- a/md/vs2015.md
+++ b/md/vs2015.md
@@ -24,6 +24,7 @@ rem "make sure to run VS2015 as administrator from now on!"
 
 ## VS2015 keybindings for sequential tabbing between open files for windows.
 > tools > options > environment > keyboard
-- search `window.nextdocumentwindow` replace with `ctrl + tab` then click `assign`
-- search `window.previousdocumentwindow` replace with `ctrl + shift + tab` then click `assign`
+- search `window.nexttab` replace with `ctrl + tab` then click `assign`
+- search `window.previoustab` replace with `ctrl + shift + tab` then click `assign`
+- search `selectcurrentword` and remove its shortcut assignment
 - search `window.closedocumentwindow` replace with `ctrl + w` then click `assign`
