quick fixes to .net core docs

--- a/md/.net-core.md
+++ b/md/.net-core.md
@@ -5,13 +5,13 @@
 1. Install [Visual Studio Code](https://code.visualstudio.com) and its [C# extension](https://marketplace.visualstudio.com/items?itemName=ms-vscode.csharp).
 2. Install [Homebrew](http://brew.sh) from VSCode's terminal. Brew is a Package Manager for MacOS that can install neat and necessary things.
 3. Go to [Microsoft](https://www.microsoft.com/net/core#macos) for explicit additional brew commnads for setup.
-4. Exec Brew setup commands obtained from step 2. ASP.Net Core requires OpenSSL to work. these steps ensure it's installed properly. You can pretty much forget about `Brew` now.
+4. Exec Brew setup commands obtained from step 3. ASP.Net Core requires OpenSSL to work. these steps ensure it's installed properly. You can pretty much forget about `Brew` now.
 5. Download and install .Net Core from [Microsoft](https://www.microsoft.com/net/core#macos).
 6. `npm` is the NodeJS Package Manager. It's obviously bundled with NodeJS. Install it. [nodejs.org](https://nodejs.org).
 7. Install Bower using npm. `npm install -g bower`
 8. Let's make a web app. `mkdir ~/Source/first-web-app`
 9. Explicitly open the folder we created in VSCode. `File > Open Folder`
-10. Exec `dotnet new -t web` in VSCode Terminal. The `-t` option specifies the type of app we want to create. In this case a web app.
+10. Exec `dotnet new web` in VSCode Terminal. `web`, `mvc`, `console`, and  `classlib` are other templates that can be chosen from.
     - Eventually VSCode will ask you if you want to add launch configuration files. `click yes` 
 11. Exec `dotnet restore` in VSCode Terminal.
 12. Open `bower.json` to view what JS dependencies Microsoft thinks it should install by default for you, then restore those dependencies by executing `bower install`
