additional stubbings for cicd blog post

--- a/md/.net-core-CICD.md
+++ b/md/.net-core-CICD.md
@@ -1,4 +1,4 @@
-# Continuous Integration and Continuous Delivery for .net Core
+# Continuous Integration and Continuous Delivery for .net Core in VSO
 CICD with .net Core 1.1 in VSO for windows and linux azure app services
 
 ## Windows
@@ -8,8 +8,10 @@ CICD with .net Core 1.1 in VSO for windows and linux azure app services
 - git init
 - git set upstream or something
 - dotnet new mvc
+- write code and unit tests
+- automate integration tests for IO opperations...............
 - git commit -m "commit demo mvc app"
-- create build definition
+- create build definition and run unit tests / integration automation
 - create an azure app service
 - create release definition
 
