--- a/md/.net-core-CICD.md
+++ b/md/.net-core-CICD.md
@@ -1,5 +1,7 @@
 # Continuous Integration and Continuous Delivery for .net Core in VSO
-CICD with .net Core 1.1 in VSO for windows and linux azure app services
+CICD with .net Core 1.1 in VSO for windows and linux azure app services. 
+
+> CI/CD is the process of building, testing and deploying code to production frequently and continuously. CI is about taking code to artifact (build) and performing tests (unit/regression/integration) to ensure artifacts are ready to be deployed to customers in production. CD is about automating all these steps so you can reduce the amount of time (and risk) it takes to deliver code into production. - [source](https://harness.io/2017/10/another-continuous-delivery-blog/)
 
 ## Windows
 - create a vso git repo
