more blogging notes

--- a/md/.net-core-CICD.md
+++ b/md/.net-core-CICD.md
@@ -13,7 +13,7 @@ CICD with .net Core 1.1 in VSO for windows and linux azure app services.
 - write code and unit tests
 - automate integration tests for IO opperations...............
 - git commit -m "commit demo mvc app"
-- create build definition and run unit tests / integration automation
+- create build definition and run unit tests / integration automation, fail if necessary
 - create an azure app service
 - create release definition
 
